  * Xorg server 1.12 and Mesa 8.0 with Gallium3D for Radeon cards
  * Nouveau driver is used for Nvidia cards
  * Better support for VMware graphics virtualization

  * Simplified boot parameters handling, most are now omitted
  * Added "blacklist" boot parameter for kernel modules blacklisting
  * Added "bridges" boot parameter for specifying Tor bridges
  * More rigorous Wi-Fi and Bluetooth (un)blocked states on boot

  * Added small CD -> USB bootstrapping ISO image
  * Added optional PKCS#11 smart-cards support to GnuPG
  * Added reaver-wps, a WiFi Protected Setup cracking tool
  * Added Redshift, a screen color temperature adjuster
  * Disabled GnuPG-S/MIME autoimport of expired certificates
  * GTK-2 and GTK-3 themes are now uniform


2012-06-17
  + 2012.2 release

  * Better handling of "readonly" boot parameter for some boot media
  * Better SD boot media support on some hardware
  * Added USB 3.0 boot media support
  * Last remaining executable PaX exception has been removed

  * Cables communication is now self-contained, based on libmicrohttpd

  * Added VIPS image manipulation toolkit (including nip2 GUI)
  * Added XInput calibrator
  * Removed ePDFView
  * Fixed key retrieval in GNU Privacy Assistant


2012-05-11
  + 2012.1 release

  * Kernel 3.2.11 with devtmpfs in initramfs
  * Fixed memory wiping in KEXEC kernel
  * Removed almost all PaX protection exceptions
  * Fixed multilingual disk labels support for automount
  * Fixed 3G support for modems with PIN unlocking
  * More extensive firmware support
  * Better hardware support (nVidia SATA, BRCM4313, DVBs, joysticks, tablets)
  * Experimental (U)EFI booting support using GRUB 2

  * Better filesystem security (read-only root fs)
  * CD boot media ejection now triggers shutdown (same as USB boot media)
  * Filesystem is now FHS-3.2+/run-compliant
  * Removed framebuffer console splash and decoration
  * Reworked framebuffer handling and simplified boot menu entries