@@ -10,6 +10,8 @@ silentpng=${dir}/liberte-logo-empty.png
 vmtype=/var/run/vmtype
 vmfont=/usr/share/fonts/dejavu/DejaVuSans.ttf
 
+profile=/var/run/usage-profile
+
 timeout=120
 
 height=`xwininfo -root | sed -n 's/^  Height: //p'`
@@ -35,15 +37,22 @@ if [ ! -e ${png} ]; then
     if [ -e ${silentflag} ]; then
         cp ${silentpng} ${png}
     # Black background is needed for xlock (display +matte has no antialiasing)
-    elif [ -s ${vmtype} ]; then
-        vmname=`cat ${vmtype}`
+    elif [ ! -s ${vmtype}  -a  ! -s ${profile} ]; then
+        exec rsvg-convert --background-color=black -h ${size} -o ${png} ${svg}
+    else
+        warning=
+        if [ -s ${vmtype} ]; then
+            warning="${warning:+${warning}\n}non-native environment\n(`cat ${vmtype}`)"
+        fi
+        if [ -s ${profile} ]; then
+            warning="${warning:+${warning}\n}irregular profile\n(`cat ${profile}`)"
+        fi
+
         texty=`qalc -t "round(${size} * 3/8)"`
         textpt=`qalc -t "${size} * 13/400"`
 
         exec rsvg-convert --background-color=black -h ${size} ${svg} \
              | convert -font ${vmfont} -pointsize ${textpt} -fill yellow -gravity center \
-               -draw "text 0,${texty} 'Warning:\nnon-native environment\n(${vmname})'" - ${png}
-    else
-        exec rsvg-convert --background-color=black -h ${size} -o ${png} ${svg}
+               -draw "text 0,${texty} 'Warning:\n${warning}'" - ${png}
     fi
 fi
