@@ -1,0 +1,40 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <title>Safe Browser</title>
+  </head>
+  <body>
+    <h1>Browse safely!</h1>
+
+    <p>
+      <strong>You have booted in non-anonymous mode</strong>.
+      Connections are <strong>not</strong> automatically
+      <a href="https://www.torproject.org/">Torified</a>.
+      User-level settings are kept separately from the Torified mode settings.
+    </p>
+
+    <p>
+      Here are some useful sites:
+    </p>
+    <ul>
+      <li><a href="http://xmh57jrzrnw6insl.onion/">TORCH</a>,
+          <a href="http://kpvz7ki2v5agwt35.onion/wiki/">The Hidden Wiki</a></li>
+      <li><a href="http://wikileaks.ch/">WikiLeaks</a>,
+          <a href="http://cryptome.org/">Cryptome</a>,
+          <a href="http://www.fas.org/blog/secrecy/">Secrecy News</a></li>
+      <li><a href="http://panopticlick.eff.org/">Panopticlick</a>,
+          <a href="http://browserspy.dk/">BrowserSpy</a>,
+          <a href="https://check.torproject.org/">Tor Check</a></li>
+      <li><p><a href="http://dee.su/liberte">Liberté Linux</a>
+          (check for updates), <a href="https://forum.dee.su/">Discussion Portal</a></p></li>
+    </ul>
+
+    <p>
+      Lastly, remember that web browser is a program that is most exposed to
+      malicious attacks. Visit only trusted sites!
+    </p>
+  </body>
+</html>
