@@ -21,6 +21,7 @@
 #     gentoo=nosettings  - do not save/restore user-level application settings
 #     gentoo=nox         - disable X server configuration (manual "startx" is ok)
 #     gentoo=nologo      - disable desktop background logo (includes lock screen)
+#     gentoo=noanon      - non-anonymous mode with separate user settings (CAUTION)
 #
 #     bridges=...        - comma-separated list of Tor bridges: IP[:port(=443)]
 # "gentoo=" prefix is optional, and can combine several comma-separated parameters
@@ -56,7 +57,7 @@ LABEL liberte
     APPEND cdroot_hash=FSHASH video=800x600-32 quiet memtest=1 loglevel=4
     TEXT HELP
 Select for normal boot.
-Optional params: readonly, [no]toram, gentoo={i2p,nosettings}.
+Optional params: readonly, [no]toram, gentoo={i2p,nosettings,noanon}.
     ENDTEXT
 
 LABEL vesa
@@ -65,7 +66,7 @@ LABEL vesa
     APPEND cdroot_hash=FSHASH nomodeset gentoo=xvesa quiet memtest=1 loglevel=4
     TEXT HELP
 Disables framebuffer console and forces VESA graphics in X.
-Optional params: readonly, [no]toram, gentoo={i2p,nosettings}.
+Optional params: readonly, [no]toram, gentoo={i2p,nosettings,noanon}.
     ENDTEXT
 
 LABEL console
