@@ -1,0 +1,56 @@
+#!/bin/sh -e
+
+# This script can be executed several times for a given
+# profile, but does not support switching between different
+# profiles (currently irrelevant).
+
+profile="$1"
+save=/var/run/usage-profile
+
+
+case "${profile}" in
+    # Non-anonymous connections (unless using explicit URLs)
+    noanon)
+        # Privoxy: disable default forwarding to Tor SOCKS
+        sed -i 's/^forward-socks5 \+\/ /# &/'         /etc/privoxy/config
+
+        # SSH: disable Tor SOCKS proxy
+        sed -i 's/^ProxyCommand\>/# &/'               /home/anon/config/ssh/config
+
+        # XChat: disable Tor SOCKS proxy, and enable automatic DCC IP,
+        #        restore default servers list
+        sed -i 's/^\(net_proxy_type =\) 3$/\1 0/'     /home/anon/config/xchat/xchat.conf
+        sed -i 's/^\(dcc_ip_from_server =\) 0$/\1 1/' /home/anon/config/xchat/xchat.conf
+        rm -f                                         /home/anon/config/xchat/servlist_.conf
+
+        # Pidgin: disable Tor SOCKS proxy, and enable automatic IP detection
+        sed -i 's/\<socks5\>/none/'                   /home/anon/config/purple/prefs.xml
+        sed -i 's/\(\<auto_ip\>.*\)\<0\>/\11/'        /home/anon/config/purple/prefs.xml
+
+        # Epiphany: replace default homepage and .onion search bookmarks
+        sed -i 's/\<browser\.html\>/browser-noanon.html/;
+                s@http://3g2upl4pq6kufc4m.onion@https://duckduckgo.com@' \
+            /etc/dconf/db/anon.d/db.ini                                  \
+            /home/anon/config/gnome2/epiphany/bookmarks.rdf
+
+        rm -f /etc/dconf/db/anon
+        dconf update
+
+        # Unsafe Browser: remove menu icon
+        rm -f /home/anon/config/local/applications/unsafe-browser.desktop
+
+        # Remove torification wrappers
+        rm -f /home/anon/bin/wrappers/whois \
+              /home/anon/bin/wrappers/gftp  \
+              /home/anon/bin/wrappers/eboard
+        ;;
+
+
+    *)
+        echo "Unknown profile"
+        exit 1
+        ;;
+esac
+
+
+echo "${profile}" > ${save}
